ReporteRs 0.7.6
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* addHeaderRow has a new argument **first** to insert the row at 
  on top of header rows.  


ReporteRs 0.7.5
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new function text_extract to extract text from a docx object

DEBUG
------------------------------------------------------------------

* debug PowerPoint slide replacement
  See https://github.com/davidgohel/ReporteRs/issues/66 


ReporteRs 0.7.4
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new print method for FlexTable that display the FlexTable in 
  the default browser or in RStudio viewer 

* improved vanilla.table rendering

* pot now handles *soft returns* when \n is used.

DEBUG
------------------------------------------------------------------

* debug text insertion in header/footer row with merged cells.
  See http://github.com/davidgohel/ReporteRs/issues/58

ReporteRs 0.7.3
==================================================================

DEBUG
------------------------------------------------------------------

* minor debug with FlexTable subset (reported by Gilles Chapron).

* Fix addDocument issue: close embedded file after having read it.
  (suggested by Olivier Barriere)
 
ReporteRs 0.7.2
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* nicer tooltip with interactive plots in bsdoc documents. 
  See addPlot.bsdoc.

* modify examples so that R CMD check --run-donttest does not fail
 
ReporteRs 0.7.1
==================================================================
DEBUG