@@ -124,6 +124,7 @@ export(deleteBookmarkNextContent)
 export(docx)
 export(is.color)
 export(light.table)
+export(list_bookmarks)
 export(parCenter)
 export(parJustify)
 export(parLeft)
