@@ -6,6 +6,9 @@ ENHANCEMENT
 
 * addHeaderRow has a new argument **first** to insert the row at 
   on top of header rows.  
+  
+* new function list_bookmarks to extract bookmark names in a 
+  docx object
 
 
 ReporteRs 0.7.5
